--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
     "next": "14.0.4",
+    "next-connect": "^1.0.0",
+    "pg": "^8.11.3",
     "react": "^18",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18"
