--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
+    "install": "^0.13.0",
     "next": "14.0.4",
     "next-connect": "^1.0.0",
+    "npm": "^10.3.0",
     "pg": "^8.11.3",
     "react": "^18",
     "react-bootstrap": "^2.9.2",
